--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "@angular/platform-browser-dynamic": "12.1.2",
     "@angular/router": "12.1.2",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
+    "@sweetalert2/themes": "^5.0.8",
     "bootstrap": "4.5.2",
     "chart.js": "2.9.3",
     "clipboard": "2.0.6",
     "core-js": "3.15.2",
     "ngx-clipboard": "14.0.1",
+    "ngx-cookie-service": "^13.1.2",
+    "ngx-spinner": "^13.0.0",
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
     "rxjs": "7.2.0",
+    "sweetalert2": "^11.4.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
