--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "12.1.2",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@sweetalert2/themes": "^5.0.8",
+    "angularx-social-login": "^4.0.1",
     "bootstrap": "4.5.2",
     "chart.js": "2.9.3",
     "clipboard": "2.0.6",
