--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
+    "sass": "~1.32.12",
     "@angular-devkit/build-angular": "12.1.2",
     "@angular/cli": "12.1.2",
     "@angular/compiler-cli": "12.1.2",
