--- a/package.json
+++ b/package.json
@@ -24,11 +24,20 @@
     "@angular/router": "12.1.2",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@sweetalert2/themes": "^5.0.8",
+    "angular-datatables": "^13.0.1",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "4.5.2",
     "chart.js": "2.9.3",
     "clipboard": "2.0.6",
     "core-js": "3.15.2",
+    "datatables.net": "^1.11.5",
+    "datatables.net-buttons": "^2.2.2",
+    "datatables.net-buttons-dt": "^2.2.2",
+    "datatables.net-dt": "^1.11.5",
+    "datatables.net-select": "^1.3.4",
+    "datatables.net-select-dt": "^1.3.4",
+    "jquery": "^3.6.0",
+    "jszip": "^3.7.1",
     "ngx-clipboard": "14.0.1",
     "ngx-cookie-service": "^13.1.2",
     "ngx-spinner": "^13.0.0",
@@ -39,13 +48,16 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "sass": "~1.32.12",
     "@angular-devkit/build-angular": "12.1.2",
     "@angular/cli": "12.1.2",
     "@angular/compiler-cli": "12.1.2",
     "@angular/language-service": "12.1.2",
+    "@types/datatables.net": "^1.10.21",
+    "@types/datatables.net-buttons": "^1.4.7",
+    "@types/datatables.net-select": "^1.2.7",
     "@types/jasmine": "3.8.1",
     "@types/jasminewd2": "2.0.10",
+    "@types/jquery": "^3.5.14",
     "@types/node": "16.3.2",
     "codelyzer": "6.0.2",
     "jasmine-core": "3.8.0",
@@ -56,6 +68,7 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.7.0",
     "protractor": "7.0.0",
+    "sass": "~1.32.12",
     "ts-node": "10.1.0",
     "tslint": "6.1.3",
     "typescript": "4.3.5"
